# libmirism

./: CMakeLists.txt  TODO.md
include/mirism/: atomic.hpp  atomic.impl.hpp  common.hpp  common.impl.hpp  framework.hpp  instance.hpp  instance.impl.hpp  logger.hpp  logger.impl.hpp  mirism.hpp  pipe.hpp  pipe.impl.hpp  utility.hpp
include/mirism/backend/: httplib.hpp
include/mirism/client/: base.hpp  request.hpp  response.hpp
include/mirism/detail/: atomic.hpp  atomic.impl.hpp  common.hpp  common.impl.hpp  instance.hpp  instance.impl.hpp  logger.hpp  logger.impl.hpp  pipe.hpp  pipe.impl.hpp
include/mirism/detail/client/: base.hpp
include/mirism/detail/content/text/: html.hpp  html.impl.hpp
include/mirism/detail/handler/: base.hpp  subdomain.hpp
include/mirism/detail/handler/subdomain/: mirror.hpp
include/mirism/detail/server/: base.hpp  httplib.hpp  httplib.impl.hpp
include/mirism/detail_/: atomic.hpp  atomic.impl.hpp  common.hpp  common.impl.hpp  instance.hpp  instance.impl.hpp  logger.hpp  logger.impl.hpp  pipe.hpp  pipe.impl.hpp
include/mirism/detail_/backend/: httplib.hpp
include/mirism/detail_/client/: base.hpp  httplib.hpp  httplib.impl.hpp
include/mirism/detail_/content/: base.hpp  base.impl.hpp  binary.hpp  binary.impl.hpp
include/mirism/detail_/content/text/: base.hpp  base.impl.hpp  html.hpp  html.impl.hpp
include/mirism/detail_/framework/: client.hpp  server.hpp
include/mirism/detail_/framework/content/: base.hpp
include/mirism/detail_/framework/handler/: base.hpp  domain.hpp
include/mirism/detail_/framework/site/: base.hpp
include/mirism/detail_/handler/: base.hpp  domain_mirror.hpp
include/mirism/detail_/handler/content/: base.hpp  base.tpp  binary.hpp  html.hpp  textbase.hpp
include/mirism/detail_/handler/content/text/: base.hpp
include/mirism/detail_/handler/handler/: base.hpp  domain.hpp
include/mirism/detail_/handler/mirror/: base.hpp  domain.hpp
include/mirism/detail_/handler/site/: base.hpp
include/mirism/detail_/handler/subdomain/: base.hpp
include/mirism/detail_/httplib/: client.hpp
include/mirism/detail_/misc/: atomic.hpp  atomic.impl.hpp  atomic.tpp  common.hpp  common.impl.hpp  common.tpp  concepts.hpp  concepts.impl.hpp  concepts.tpp  format.hpp  format.impl.hpp  format.tpp  http.hpp  http.impl.hpp  logger.hpp  logger.impl.hpp  logger.tpp  pipe.hpp  pipe.impl.hpp  shutdown_handler.hpp  shutdown_handler.impl.hpp  smartref.hpp  smartref.impl.hpp  smartref.tpp  staticize.hpp  staticize.impl.hpp  string.hpp  string.impl.hpp  string.tpp
include/mirism/detail_/server/: base.hpp  httplib.hpp  httplib.impl.hpp
include/mirism/detail_/site/: base.hpp
include/mirism/detail_/utility/: atomic.hpp  atomic.tpp  called_by.hpp  common.hpp  common.tpp  compression.hpp  concepts.hpp  concepts.tpp  format.hpp  format.tpp  http.hpp  logger.hpp  logger.tpp  smartref.hpp  smartref.tpp  string.hpp  string.tpp
include/mirism/handler/: base.hpp  subdomain.hpp
include/mirism/handler/subdomain/mirror/: base.hpp
include/mirism/mirror/: base.hpp
include/mirism/server/: base.hpp
include/mirism/utility/: atomic.hpp  called_by.hpp  common.hpp  compression.hpp  concepts.hpp  format.hpp  http.hpp  logger.hpp  smartref.hpp  string.hpp
src/: CMakeLists.txt
src/detail_/misc/: common.cpp  logger.cpp  string.cpp
src/framework/: CMakeLists.txt  framework.cpp
src/framework/handler/: base.cpp
src/handler/: CMakeLists.txt
src/handler/content/: base.cpp  binary.cpp
src/handler/content/text/: base.cpp
src/httplib/: CMakeLists.txt  client.cpp
src/misc/: common.cpp  compression.cpp  logger.cpp  string.cpp
src/utility/: CMakeLists.txt  common.cpp  compression.cpp  http.cpp  logger.cpp  string.cpp
test/: CMakeLists.txt  atomic.cpp  common.cpp  httplib.cpp  instance.cpp  logger.cpp  pipe.cpp  utility.cpp
test/client/: base.cpp  httplib.cpp
test/content/: base.cpp  binary.cpp
test/content/text/: base.cpp
test/misc/: atomic.cpp  called_by.cpp  common.cpp  concepts.cpp  format.cpp  logger.cpp  pipe.cpp  smartref.cpp  staticize.cpp  string.cpp
test/utility/: CMakeLists.txt  common.cpp
