option(LIBMIRISM_BUILD_UTILITY "Build utility library" ON)
option(LIBMIRISM_BUILD_FRAMEWORK "Build framework library" ON)
option(LIBMIRISM_BUILD_HANDLER "Build handler library" OFF)
option(LIBMIRISM_BUILD_HTTPLIB "Build httplib backend" OFF)

if (LIBMIRISM_BUILD_UTILITY)
	add_subdirectory(utility)
endif()
if (LIBMIRISM_BUILD_FRAMEWORK)
	add_subdirectory(framework)
endif()
if (LIBMIRISM_BUILD_HANDLER)
	add_subdirectory(handler)
endif()
if (LIBMIRISM_BUILD_HTTPLIB)
	add_subdirectory(httplib)
endif()
